--- a/TP_android/res/layout/activity_note.xml
+++ b/TP_android/res/layout/activity_note.xml
@@ -26,4 +26,13 @@
         android:layout_toLeftOf="@+id/back"
         android:text="TextView" />
 
+    <TextView
+        android:id="@+id/pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="79dp"
+        android:text="TextView" />
+
 </RelativeLayout>
